src/kubernetes/infrastructure/traefik/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: traefik
  labels:
    app.kubernetes.io/name: traefik
    app.kubernetes.io/part-of: traefik
